# gitlab-ci-helper

./: .env.example  Cargo.toml
src/: main.rs
