[package]
name = "gitlab-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
semver = "1.0.23"
winnow = "0.6.20"
gitlab = "0.1705.0"
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
dotenvy = "0.15.7"
cfg-if = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }
